Adds filename building utility
DAS-1606

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -62,7 +62,7 @@
     "import rasterio\n",
     "from rasterio.transform import Affine\n",
     "from rasterio.crs import CRS\n",
-    "from utility import  print_success, assert_dataset_produced_correct_results\n",
+    "from utility import print_success, assert_dataset_produced_correct_results, build_file_list\n",
     "from tempfile import TemporaryDirectory\n",
     "from pathlib import Path\n",
     "from numpy.testing import assert_array_almost_equal\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c668ac0c",
+   "id": "fd8d6cb3",
    "metadata": {},
    "source": [
     "## Test input GeoTIFF with no color information\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eb03ad7",
+   "id": "19878976",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,10 +175,7 @@
     "    aster_job_id = harmony_client.submit(aster_request)\n",
     "    harmony_client.wait_for_processing(aster_job_id, show_progress=True)\n",
     "\n",
-    "    expected_files = ['ASTGTMV003_N00E022_dem.png',\n",
-    "                      'ASTGTMV003_N00E022_dem.pgw',\n",
-    "                      'ASTGTMV003_N00E022_dem.png.aux.xml']\n",
-    "\n",
+    "    reference_files = build_file_list(aster_basename, reference_dir, 'PNG')\n",
     "\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        downloaded_grid_outputs = [\n",
@@ -186,11 +183,8 @@
     "            for file_future\n",
     "            in harmony_client.download_all(aster_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
-    "        \n",
     "\n",
-    "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
-    "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
-    "\n",
+    "        test_files = build_file_list(aster_basename, Path(temp_dir), 'PNG') \n",
     "        for file_name in test_files:\n",
     "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
@@ -225,7 +219,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "if environment_information is not None:\n",
     "    aster_request = Request(collection=environment_information['aster_collection'],\n",
     "                           granule_id=environment_information['aster_granules'][0],\n",
@@ -233,11 +226,7 @@
     "    aster_job_id = harmony_client.submit(aster_request)\n",
     "    harmony_client.wait_for_processing(aster_job_id, show_progress=True)\n",
     "\n",
-    "\n",
-    "    expected_files = ['ASTGTMV003_N00E022_dem.jpg',\n",
-    "                      'ASTGTMV003_N00E022_dem.jgw',\n",
-    "                      'ASTGTMV003_N00E022_dem.jpg.aux.xml']\n",
-    "\n",
+    "    reference_files = build_file_list(aster_basename, reference_dir, 'JPEG')\n",
     "\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        downloaded_grid_outputs = [\n",
@@ -246,10 +235,7 @@
     "            in harmony_client.download_all(aster_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
     "\n",
-    "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
-    "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
-    "        \n",
-    "\n",
+    "        test_files = build_file_list(aster_basename, Path(temp_dir), 'JPEG')\n",
     "        for file_name in test_files:\n",
     "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
@@ -269,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa5b3c03",
+   "id": "da0eb9c7",
    "metadata": {},
    "source": [
     "### Test request from 3-band RGB input geoTIFF\n",
@@ -280,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dc35b04",
+   "id": "9ba87bf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +285,8 @@
     "                        'AUTHORITY[\"EPSG\",\"9122\"]],AXIS[\"Latitude\",NORTH],AXIS[\"Longitude\",EAST]]'),\n",
     "    'transform': Affine(0.05000000000000001, 0.0, -180.0,\n",
     "                        0.0, -0.05000000000000001, 90.0)\n",
-    "}\n"
+    "}\n",
+    "measures_base = 'VCF5KYR_1991001_001_2018224205008'"
    ]
   },
   {
@@ -327,9 +314,7 @@
     "    measures_job_id = harmony_client.submit(measures_request)\n",
     "    harmony_client.wait_for_processing(measures_job_id, show_progress=True)\n",
     "\n",
-    "    expected_files = ['VCF5KYR_1991001_001_2018224205008.png',\n",
-    "                      'VCF5KYR_1991001_001_2018224205008.pgw',\n",
-    "                      'VCF5KYR_1991001_001_2018224205008.png.aux.xml']\n",
+    "    reference_files = build_file_list(measures_base, reference_dir, 'PNG')\n",
     "\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        downloaded_grid_outputs = [\n",
@@ -338,9 +323,7 @@
     "            in harmony_client.download_all(measures_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
     "        \n",
-    "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
-    "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
-    "\n",
+    "        test_files = build_file_list(measures_base, Path(temp_dir), 'PNG')\n",
     "        for file_name in test_files:\n",
     "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
     "    \n",
@@ -384,10 +367,8 @@
     "    measures_job_id = harmony_client.submit(measures_request)\n",
     "    harmony_client.wait_for_processing(measures_job_id, show_progress=True)\n",
     "\n",
-    "    expected_files = ['VCF5KYR_1991001_001_2018224205008.jpg',\n",
-    "                      'VCF5KYR_1991001_001_2018224205008.jgw',\n",
-    "                      'VCF5KYR_1991001_001_2018224205008.jpg.aux.xml']\n",
-    "\n",
+    "    reference_files = build_file_list(measures_base, reference_dir, 'JPG')\n",
+    "    \n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        downloaded_grid_outputs = [\n",
     "            file_future.result()\n",
@@ -395,9 +376,7 @@
     "            in harmony_client.download_all(measures_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
     "        \n",
-    "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
-    "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
-    "\n",
+    "        test_files = build_file_list(measures_base, Path(temp_dir), 'JPG')\n",
     "        for file_name in test_files:\n",
     "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
