--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -44,6 +44,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8240032",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Prerequisites\n",
+    "\n",
+    "The dependencies for this notebook are listed in the [environment.yaml](./environment.yaml). To test or install locally, create the papermill environment used in the automated regression testing suite:\n",
+    "\n",
+    "`conda env create -f ./environment.yaml && conda activate papermill-hga`\n",
+    "\n",
+    "A `.netrc` file must also be located in the `test` directory of this repository."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7f0766b7",
    "metadata": {},
