--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "The dependencies for this notebook are listed in the [environment.yaml](./environment.yaml). To test or install locally, create the papermill environment used in the automated regression testing suite:\n",
     "\n",
-    "`conda env create -f ./environment.yaml && conda activate papermill`\n",
+    "`conda env create -f ./environment.yaml && conda activate papermill-hoss`\n",
     "\n",
     "A `.netrc` file must also be located in the `test` directory of this repository."
    ]
