HARMONY-1563: Set ignore_errors to False for HGA regression test checking for specific error messages and a failed request.

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -1468,6 +1468,7 @@
     "    sentinel_request_thirteen = Request(collection=environment_information['sentinel_collection'],\n",
     "                                        spatial=BBox(-115.45, 32.95, -115.15, 33.09),\n",
     "                                        granule_id=granule_id,\n",
+    "                                        ignore_errors=False,\n",
     "                                        variables=['science/grids/data/amplitude',\n",
     "                                                   'science/grids/imagingGeometry/azimuthAngle'])\n",
     "\n",
