DAS-1969: pass hoss regression tests from updated records.

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -492,7 +492,7 @@
     "    hoss_shape_request = Request(collection=hoss_shape_info['collection'],\n",
     "                                 granule_id=hoss_shape_info['granule_id'],\n",
     "                                 shape=hoss_shape_info['shape_file_path'],\n",
-    "                                 variables=['/Grid/precipitationCal'])\n",
+    "                                 variables=['Grid/precipitationCal'])\n",
     "    submit_and_download(harmony_client, hoss_shape_request, hoss_shape_file_name)\n",
     "    assert exists(hoss_shape_file_name), 'Unsuccessful HOSS-Geographic polygon spatial subset request.'\n",
     "\n",
@@ -527,7 +527,7 @@
     "    hoss_bounds_bbox = BBox(w=60, s=-15, e=75, n=0)\n",
     "    hoss_bounds_request = Request(collection=hoss_info['bounds_collection'],\n",
     "                                  granule_id=[hoss_info['bounds_granule_id']],\n",
-    "                                  variables=['/Grid/precipitationCal'],\n",
+    "                                  variables=['Grid/precipitationCal'],\n",
     "                                  spatial=hoss_bounds_bbox,\n",
     "                                  temporal={'start': datetime(2020, 1, 18, 18, 45, 0),\n",
     "                                            'stop': datetime(2020, 1, 18, 19, 45, 0)})\n",
