--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -44,11 +44,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6e210ef",
+   "cell_type": "markdown",
+   "id": "7e969d81",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Prerequisites\n",
     "\n",
@@ -162,22 +160,28 @@
     "common_aster_metadata = {\n",
     "    'dtype': 'uint8',\n",
     "    'nodata': None,\n",
-    "    'width': 3601,\n",
-    "    'height': 3601,\n",
+    "    'width': 3641,\n",
+    "    'height': 3641,\n",
+    "    'count': 1,\n",
     "    'crs': CRS.from_epsg(4326),\n",
-    "    'transform': Affine(0.09997222993612885, 0.0, -180.0, 0.0, -0.049986114968064425, 90.0)\n",
+    "    'transform': Affine(0.00027464982147761604, 0.0, 22.0, 0.0, -0.00027464982147761604, 1.0)\n",
     "}\n",
-    "aster_basename = 'ASTGTMV003_N00E022_dem'"
+    "aster_basename = 'ASTGTMV003_N00E022_dem'\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e696afee",
+   "id": "29f71685",
    "metadata": {},
    "source": [
-    "### Test a request for PNG output from a 1-band GeoTIFF with no color information\n",
+    "### Test that specifies spatial extents overrides GIBS-compatible defaults:\n",
     "\n",
-    "Forms a request for ASTER data (1-band with no color info) as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the PNG file matches the reference data in the test."
+    "This test will specify a scale extent in the request, which tells Harmony the spatial area of a browse imagery. Unlike a bounding box, this spatial extent should be in the coordinates of the granule (e.g., geographic or projected as appropriate).\n",
+    "\n",
+    "The output from this test should be constrained to the specified area, in this case that of the ASTER tile, which has approximately the following extent:\n",
+    "\n",
+    "* 22 ≤ longitude (degrees east) ≤ 23\n",
+    "* 0 ≤ latitude (degrees north) ≤ 1\n"
    ]
   },
   {
@@ -188,8 +192,13 @@
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
+    "\n",
+    "    scale_extent = [22, 0, 23, 1] \n",
+    "\n",
     "    aster_request = Request(collection=environment_information['aster_collection'],\n",
     "                            granule_id=environment_information['aster_granules'][0],\n",
+    "                            scale_extent=scale_extent,\n",
+    "                            crs='EPSG:4326',\n",
     "                            format='image/png')\n",
     "\n",
     "    aster_job_id = harmony_client.submit(aster_request)\n",
@@ -227,9 +236,10 @@
    "id": "1edc6d53",
    "metadata": {},
    "source": [
-    "### Test a request for JPG output from a 1-band GeoTIFF with no color information\n",
+    "### Repeat previous test but request JPG output.\n",
     "\n",
-    "Forms a request for ASTER data as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the PNG file matches the reference data in the test."
+    "Forms a request for ASTER data as 'image/jpeg', ensures all files are created that the image has the correct metadata and that that the data in the JPG file matches the reference data in the test.\n",
+    "\n"
    ]
   },
   {
@@ -240,8 +250,12 @@
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
+    "    \n",
+    "    scale_extent = [22, 0, 23, 1]\n",
     "    aster_request = Request(collection=environment_information['aster_collection'],\n",
     "                            granule_id=environment_information['aster_granules'][0],\n",
+    "                            scale_extent=scale_extent,\n",
+    "                            crs='EPSG:4326',\n",
     "                            format='image/jpeg')\n",
     "\n",
     "    aster_job_id = harmony_client.submit(aster_request)\n",
@@ -415,78 +429,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66f86107",
-   "metadata": {},
-   "source": [
-    "### Test that specifies spatial extents overrides GIBS-compatible defaults:\n",
-    "\n",
-    "This test will specify a scale extent in the request, which tells Harmony the spatial area of a browse imagery. Unlike a bounding box, this spatial extent should be in the coordinates of the granule (e.g., geographic or projected as appropriate).\n",
-    "\n",
-    "The output from this test should be constrained to the specified area, in this case that of the ASTER tile, which has approximately the following extent:\n",
-    "\n",
-    "* 22 ≤ longitude (degrees east) ≤ 23\n",
-    "* 0 ≤ latitude (degrees north) ≤ 1\n",
-    "\n",
-    "The expected output should be a single tile - while the resolution is fine enough to trigger tiling, the specified scale extent is small enough to land within a single tile."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e763411",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if environment_information is not None:\n",
-    "    tile_extent = [22, 0, 23, 1]\n",
-    "    extent_reference_dir = reference_dir / 'scale_extent'\n",
-    "\n",
-    "    extent_request = Request(collection=environment_information['aster_collection'],\n",
-    "                             granule_id=environment_information['aster_granules'][0],\n",
-    "                             scale_extent=tile_extent, format='image/png')\n",
-    "\n",
-    "    extent_job_id = harmony_client.submit(extent_request)\n",
-    "    harmony_client.wait_for_processing(extent_job_id, show_progress=True)\n",
-    "\n",
-    "    # HyBIG will try to tile the output due to the resolution, so the naming convention\n",
-    "    # differs a little:\n",
-    "    tiled_basename = 'ASTGTMV003_N00E022_dem.r00c00'\n",
-    "    reference_files = build_file_list(tiled_basename, extent_reference_dir, 'PNG')\n",
-    "\n",
-    "    with TemporaryDirectory() as temp_dir:\n",
-    "        downloaded_extent_outputs = [\n",
-    "            file_future.result()\n",
-    "            for file_future\n",
-    "            in harmony_client.download_all(extent_job_id, overwrite=True, directory=temp_dir)\n",
-    "        ]\n",
-    "\n",
-    "        test_files = build_file_list(tiled_basename, Path(temp_dir), 'PNG')\n",
-    "\n",
-    "        for file_name in test_files:\n",
-    "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
-    "\n",
-    "        print_success('all test files generated')\n",
-    "\n",
-    "        expected_output_metadata = {\n",
-    "            **common_aster_metadata,\n",
-    "            'driver': 'PNG',\n",
-    "            'count': 1,\n",
-    "            'transform': Affine(0.00027464982147761604, 0.0, 22.0, 0.0, -0.00027464982147761604, 1.0),\n",
-    "            'height': 3641,\n",
-    "            'width': 3641\n",
-    "        }\n",
-    "\n",
-    "        assert_dataset_produced_correct_results(\n",
-    "            test_files[0], expected_output_metadata, reference_files[0], 'PNG'\n",
-    "        )\n",
-    "\n",
-    "    print_success('Conversion of ASTER GeoTIFF to PNG specifying extents. Success')\n",
-    "else:\n",
-    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "80f65c5a",
    "metadata": {},
    "source": [
@@ -512,7 +454,8 @@
     "\n",
     "    scale_size_request = Request(collection=environment_information['measures_collection'],\n",
     "                                 granule_id=environment_information['measures_granules'][0],\n",
-    "                                 scale_size=scale_sizes, format='image/png')\n",
+    "                                 scale_size=scale_sizes,\n",
+    "                                 crs='EPSG:4326', format='image/png')\n",
     "\n",
     "    scale_size_job_id = harmony_client.submit(scale_size_request)\n",
     "    harmony_client.wait_for_processing(scale_size_job_id, show_progress=True)\n",
@@ -619,17 +562,45 @@
    "source": [
     "### Test of tiled outputs:\n",
     "\n",
-    "This test will specify a combination of scale size and scale extent that will cause HyBIG to tile the output imagery. At the same time, efforts will be taken to ensure a small number of tiles, as the initial tiling scheme (10 degrees x 10 degrees) results in a large number of tiles for a whole-Earth product.\n",
+    "This test will specify a combination of scale size and scale extent that will\n",
+    "cause HyBIG to tile the output imagery. At the same time, we choose values to\n",
+    "ensure a small number of tiles.\n",
     "\n",
-    "The expected output should be 2 contiguous tiles, each covering part of Iceland:\n",
+    "We choose the region over iceland: [-30, 60, -10, 70]\n",
     "\n",
-    "**Tile 1 (r00c00):**\n",
-    "* -30 ≤ longitude (degrees east) ≤ -20\n",
+    "And trigger tiling, we have to choose extents so that the total number of cells is greater than 67108864\n",
+    "\n",
+    "\n",
+    "- The width of the area is 20 deg so a scale\\_size of .001 will yield a total image width = 200000\n",
+    "- The height is 10 deg and we choose a scale\\_size that will trigger tiling but still leave just one row (.0029).\n",
+    "  round(10 / .0029) = 3448\n",
+    "\n",
+    "- total cells: 20000*3448 => 68960000.0\n",
+    "\n",
+    "\n",
+    "The expected output should be 4 contiguous tiles, each covering part of Iceland:\n",
+    "\n",
+    "The width of all should be 4092 except the last tile which is only 3616.\n",
+    "\n",
+    "**Tile 0 (r00c00):**\n",
+    "* -30 ≤ longitude (degrees east) ≤ -25.904\n",
     "* 60 ≤ latitude (degrees north) ≤ 70\n",
     "\n",
-    "**Tile 2 (r00c01):**\n",
-    "* -20 ≤ longitude (degrees east) ≤ -10\n",
-    "* 60 ≤ latitude (degrees north) ≤ 70"
+    "**Tile 1 (r00c01):**\n",
+    "* -25.904 ≤ longitude (degrees east) ≤ -21.808\n",
+    "* 60 ≤ latitude (degrees north) ≤ 70\n",
+    "\n",
+    "**Tile 2 (r00c02):**\n",
+    "* -21.808 ≤ longitude (degrees east) ≤ -17.712\n",
+    "* 60 ≤ latitude (degrees north) ≤ 70\n",
+    "\n",
+    "**Tile 3 (r00c03):**\n",
+    "* -17.712 ≤ longitude (degrees east) ≤ -13.616\n",
+    "* 60 ≤ latitude (degrees north) ≤ 70\n",
+    "\n",
+    "**Tile 4 (r00c04):**\n",
+    "* -13.616 ≤ longitude (degrees east) ≤ -10\n",
+    "* 60 ≤ latitude (degrees north) ≤ 70\n"
    ]
   },
   {
@@ -641,40 +612,63 @@
    "source": [
     "if environment_information is not None:\n",
     "    iceland_extent = [-30, 60, -10, 70]\n",
-    "    iceland_scale_size = [0.01, 0.01]\n",
+    "    iceland_scale_size = [0.001, 0.0029]\n",
     "    tiled_reference_dir = reference_dir / 'tiled'\n",
     "\n",
     "    tiled_request = Request(collection=environment_information['measures_collection'],\n",
     "                            granule_id=environment_information['measures_granules'][0],\n",
     "                            scale_extent=iceland_extent, scale_size=iceland_scale_size,\n",
-    "                            format='image/png')\n",
+    "                            crs='EPSG:4326', format='image/png')\n",
     "\n",
     "    tiled_job_id = harmony_client.submit(tiled_request)\n",
     "    harmony_client.wait_for_processing(tiled_job_id, show_progress=True)\n",
     "\n",
     "    # Define the tile information, so the output for each tile can be tested:\n",
-    "    tile_one_basename = f'{measures_basename}.r00c00'\n",
-    "    tile_two_basename = f'{measures_basename}.r00c01'\n",
+    "    tile_0_basename = f'{measures_basename}.r00c00'\n",
+    "    tile_1_basename = f'{measures_basename}.r00c01'\n",
+    "    tile_2_basename = f'{measures_basename}.r00c02'\n",
+    "    tile_3_basename = f'{measures_basename}.r00c03'\n",
+    "    tile_4_basename = f'{measures_basename}.r00c04'\n",
     "\n",
     "    common_output_metadata = {\n",
     "        **common_measures_metadata,\n",
     "        'driver': 'PNG',\n",
     "        'count': 1,\n",
-    "        'height': 1000,\n",
-    "        'width': 1000\n",
+    "        'height': 3448,\n",
+    "        'width': 4096\n",
     "    }\n",
     "\n",
-    "    expected_tile_one_metadata = {\n",
+    "    expected_tile_0_metadata = {\n",
     "        **common_output_metadata,\n",
-    "        'transform': Affine(0.01, 0.0, -30.0, 0.0, -0.01, 70.0)\n",
+    "        'transform': Affine(0.001, 0.0, -30.0, 0.0, -0.002900232018561485, 70.0)\n",
     "    }\n",
-    "    expected_tile_two_metadata = {\n",
+    "    expected_tile_1_metadata = {\n",
     "        **common_output_metadata,\n",
-    "        'transform': Affine(0.01, 0.0, -20.0, 0.0, -0.01, 70.0)\n",
+    "        'transform': Affine(0.001, 0.0, -25.904, 0.0, -0.002900232018561485, 70.0)\n",
+    "    }\n",
+    "    expected_tile_2_metadata = {\n",
+    "        **common_output_metadata,\n",
+    "        'transform': Affine(0.001, 0.0, -21.808, 0.0, -0.002900232018561485, 70.0)\n",
+    "    }\n",
+    "    expected_tile_3_metadata = {\n",
+    "        **common_output_metadata,\n",
+    "        'transform': Affine(0.001, 0.0, -17.712, 0.0, -0.002900232018561485, 70.0)\n",
+    "    }\n",
+    "    expected_tile_4_metadata = {\n",
+    "        **common_output_metadata,\n",
+    "        'transform': Affine(0.001, 0.0, -13.616, 0.0, -0.002900232018561485, 70.0),\n",
+    "        'width': 3616        \n",
     "    }\n",
     "\n",
-    "    tile_information = [(tile_one_basename, expected_tile_one_metadata),\n",
-    "                        (tile_two_basename, expected_tile_two_metadata)]\n",
+    "    \n",
+    "\n",
+    "    tile_information = [\n",
+    "        (tile_0_basename, expected_tile_0_metadata),\n",
+    "        (tile_1_basename, expected_tile_1_metadata),\n",
+    "        (tile_2_basename, expected_tile_2_metadata),\n",
+    "        (tile_3_basename, expected_tile_3_metadata),\n",
+    "        (tile_4_basename, expected_tile_4_metadata),\n",
+    "    ]\n",
     "\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        downloaded_tiled_outputs = [\n",
@@ -687,12 +681,11 @@
     "        for tile_basename, expected_tile_metadata in tile_information:\n",
     "            tile_files = build_file_list(tile_basename, tiled_reference_dir, 'PNG')\n",
     "            tile_test_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
-    "\n",
+    "    \n",
     "            for file_name in tile_test_files:\n",
     "                assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "            print_success(f'All {tile_basename} test files generated')\n",
-    "\n",
     "            assert_dataset_produced_correct_results(\n",
     "                tile_test_files[0], expected_tile_metadata, tile_files[0], 'PNG'\n",
     "            )\n",
@@ -720,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
