DAS-1969: Adds tests for bad inputs.

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -81,7 +81,7 @@
     "from rasterio.transform import Affine\n",
     "from rasterio.crs import CRS\n",
     "\n",
-    "from utility import print_success, assert_dataset_produced_correct_results, build_file_list\n",
+    "from utility import print_success, print_error, assert_dataset_produced_correct_results, build_file_list\n",
     "\n",
     "\n",
     "reference_dir = Path('./reference_data')"
@@ -277,9 +277,7 @@
     "\n",
     "        expected_output_metadata = {\n",
     "            'driver': 'JPEG', **common_aster_metadata, 'count': 3\n",
-    "        }\n",
-    "        print(expected_output_metadata)\n",
-    "        \n",
+    "        }        \n",
     "        with rasterio.open(test_files[0]) as test_file:\n",
     "            print(test_file.meta)\n",
     "\n",
@@ -290,6 +288,87 @@
     "    print_success('Conversion of ASTER Geotiff to JPEG Success')\n",
     "else:\n",
     "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea255f34",
+   "metadata": {},
+   "source": [
+    "## Failure cases raised by bad input parameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e59199d8",
+   "metadata": {},
+   "source": [
+    "### Test: Scale Extent has parameters in wrong order.\n",
+    "xmin > xmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d8a3116",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    \n",
+    "    reversed_xscale_extent = [23, 0, 22, 1]\n",
+    "    aster_request = Request(collection=environment_information['aster_collection'],\n",
+    "                            granule_id=environment_information['aster_granules'][0],\n",
+    "                            scale_extent=reversed_xscale_extent,\n",
+    "                            crs='EPSG:4326',\n",
+    "                            format='image/jpeg')\n",
+    "\n",
+    "    aster_job_id = harmony_client.submit(aster_request)\n",
+    "    try: \n",
+    "        harmony_client.wait_for_processing(aster_job_id, show_progress=True)\n",
+    "        print_error('Exception not rasied for bad Scale Extents')\n",
+    "        assert False, 'Fail Scale Extent test'\n",
+    "    except Exception as exception:\n",
+    "        assert 'Harmony ScaleExtents must be in order [xmin,ymin,xmax,ymax]' in str(exception), 'Exception not raised correctly'\n",
+    "        print_success('Exception Raised Correctly for Scale Extents')\n",
+    "else:\n",
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')        \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8deff1f",
+   "metadata": {},
+   "source": [
+    "### Test: Scale Sizes are Positive\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "419eed2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    \n",
+    "    scale_size = [.002, -.002]\n",
+    "    aster_request = Request(collection=environment_information['aster_collection'],\n",
+    "                            granule_id=environment_information['aster_granules'][0],\n",
+    "                            scale_size=scale_size,\n",
+    "                            crs='EPSG:4326',\n",
+    "                            format='image/jpeg')\n",
+    "\n",
+    "    try:\n",
+    "        aster_job_id = harmony_client.submit(aster_request)        \n",
+    "        harmony_client.wait_for_processing(aster_job_id, show_progress=True)\n",
+    "        print_error('Exception not rasied for negative Scale Size.')\n",
+    "        assert False, 'Fail Scale sizes test'\n",
+    "    except Exception as exception:\n",
+    "        assert '\"scaleSize[1]\" should be >= 0' in str(exception), 'Exception not raised correctly'\n",
+    "        print_success('Exception raised correctly for negative Scale Size.')\n",
+    "else:\n",
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')        \n"
    ]
   },
   {
@@ -325,7 +404,7 @@
    "id": "db7075c7",
    "metadata": {},
    "source": [
-    "#### Test a request for PNG output from 3-Band RGB input data\n",
+    "### Test a request for PNG output from 3-Band RGB input data\n",
     "\n",
     "Forms a request for MEaSUREs VCF5KYR data (3-band RGB GeoTIFF) as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the PNG file matches the reference data in the test."
    ]
