DAS-1969: Fixes up some whitespace.

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -332,7 +332,7 @@
     "        assert 'Harmony ScaleExtents must be in order [xmin,ymin,xmax,ymax]' in str(exception), 'Exception not raised correctly'\n",
     "        print_success('Exception Raised Correctly for Scale Extents')\n",
     "else:\n",
-    "    print('Skipping test: HyBIG regression tests not configured for this environment.')        \n"
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
    ]
   },
   {
@@ -340,7 +340,7 @@
    "id": "e8deff1f",
    "metadata": {},
    "source": [
-    "### Test: Scale Sizes are Positive\n"
+    "### Test: Scale Sizes are Positive"
    ]
   },
   {
@@ -368,7 +368,7 @@
     "        assert '\"scaleSize[1]\" should be >= 0' in str(exception), 'Exception not raised correctly'\n",
     "        print_success('Exception raised correctly for negative Scale Size.')\n",
     "else:\n",
-    "    print('Skipping test: HyBIG regression tests not configured for this environment.')        \n"
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
    ]
   },
   {
@@ -736,10 +736,8 @@
     "    expected_tile_4_metadata = {\n",
     "        **common_output_metadata,\n",
     "        'transform': Affine(0.001, 0.0, -13.616, 0.0, -0.002900232018561485, 70.0),\n",
-    "        'width': 3616        \n",
+    "        'width': 3616\n",
     "    }\n",
-    "\n",
-    "    \n",
     "\n",
     "    tile_information = [\n",
     "        (tile_0_basename, expected_tile_0_metadata),\n",
@@ -760,7 +758,7 @@
     "        for tile_basename, expected_tile_metadata in tile_information:\n",
     "            tile_files = build_file_list(tile_basename, tiled_reference_dir, 'PNG')\n",
     "            tile_test_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
-    "    \n",
+    "\n",
     "            for file_name in tile_test_files:\n",
     "                assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
     "\n",
