DAS-1969: Address PR feedback
Update words in comments.

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -645,9 +645,9 @@
     "cause HyBIG to tile the output imagery. At the same time, we choose values to\n",
     "ensure a small number of tiles.\n",
     "\n",
-    "We choose the region over iceland: [-30, 60, -10, 70]\n",
+    "We choose the region over iceland: [-30, 60, -10, 70].\n",
     "\n",
-    "And trigger tiling, we have to choose extents so that the total number of cells is greater than 67108864\n",
+    "To trigger tiling, we have to choose extents so that the total number of cells is greater than 67108864\n",
     "\n",
     "\n",
     "- The width of the area is 20 deg so a scale\\_size of .001 will yield a total image width = 200000\n",
